@@ -1,3 +1,8 @@
+2001-01-17  Arturo Espinosa <arturo@ximian.com>
+
+	* network-conf.in: print and parse interface tags. Also bring up
+	  or down network interfaces, and report their status when printing.
+	
 2001-01-16  Arturo Espinosa <arturo@ximian.com>
 
 	* network-conf.in: network backend.
